--- a/app/src/main/res/layout/activity_intermediate.xml
+++ b/app/src/main/res/layout/activity_intermediate.xml
@@ -7,29 +7,55 @@
     android:background="@color/colorPrimary"
     tools:context="com.inclusivebus.inbus.Intermediate">
 
-    <Button
-        android:id="@+id/button_test"
-        android:layout_width="146dp"
-        android:layout_height="51dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/button_test"
-        app:layout_constraintBottom_toTopOf="@+id/button_app"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button_app"
-        android:layout_width="140dp"
-        android:layout_height="49dp"
-        android:layout_marginBottom="148dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="@string/button_app"
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="259dp">
+
+            <Button
+                android:id="@+id/button_test"
+                android:layout_width="390dp"
+                android:layout_height="260dp"
+                android:layout_marginBottom="2dp"
+                android:background="@color/colorPrimary"
+                android:fontFamily="casual"
+                android:text="@string/button_test"
+                android:textColor="@color/ic_inbus_background"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/button_app"
+                android:layout_width="390dp"
+                android:layout_height="262dp"
+                android:background="@color/colorPrimary"
+                android:fontFamily="casual"
+                android:text="@string/button_app"
+                android:textColor="@color/ic_inbus_background"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
