--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -10,9 +10,7 @@
         android:id="@+id/query_micro"
         android:layout_width="211dp"
         android:layout_height="73dp"
-        android:layout_marginBottom="250dp"
-        android:layout_marginEnd="75dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginStart="40dp"
         android:background="@color/ic_inbus_background"
         android:ems="10"
         android:inputType="none|textPersonName"
@@ -21,72 +19,39 @@
         android:textAlignment="center"
         android:textColor="@android:color/darker_gray"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_query" />
+        tools:layout_editor_absoluteY="148dp" />
 
     <TextView
         android:id="@+id/text_query"
         android:layout_width="267dp"
         android:layout_height="43dp"
-        android:layout_marginBottom="45dp"
-        android:layout_marginEnd="77dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="100dp"
         android:text="@string/text_query"
         android:textColor="@color/ic_inbus_background"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/query_micro"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="spread"
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="60dp"
         tools:text="@string/text_query" />
 
     <Button
         android:id="@+id/button_gorecorrido"
-        android:layout_width="47dp"
-        android:layout_height="41dp"
-        android:layout_marginBottom="251dp"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="91dp"
+        android:layout_width="65dp"
+        android:layout_height="68dp"
+        android:layout_marginEnd="40dp"
         android:text="@string/button_gorecorrido"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/query_micro"
-        app:layout_constraintTop_toBottomOf="@+id/text_query" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="153dp" />
 
     <Button
         android:id="@+id/button_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="52dp"
-        android:layout_marginEnd="148dp"
-        android:layout_marginStart="148dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="392dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:text="@string/button_back"
-        app:layout_constraintBottom_toTopOf="@+id/tv_loc"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/query_micro" />
-
-    <TextView
-        android:id="@+id/tv_loc"
-        android:layout_width="281dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="51dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginStart="51dp"
-        android:layout_marginTop="52dp"
-        android:text="@string/tv_loc"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_back" />
+        tools:layout_editor_absoluteY="398dp" />
 
 </android.support.constraint.ConstraintLayout>
