--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,32 +7,46 @@
     android:background="@color/colorPrimary"
     tools:context="com.inclusivebus.inbus.Search">
 
-    <Button
-        android:id="@+id/button_goback"
-        android:layout_width="96dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="140dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="@string/button_goback"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="123dp">
 
-    <Button
-        android:id="@+id/button_signal"
-        android:layout_width="151dp"
-        android:layout_height="80dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/button_signal"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/button_goback"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.603" />
+        <Button
+            android:id="@+id/button_signal"
+            android:layout_width="match_parent"
+            android:layout_height="370dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@color/colorPrimary"
+            android:fontFamily="casual"
+            android:text="@string/button_signal"
+            android:textAlignment="center"
+            android:textColor="@color/ic_inbus_background"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:drawableBottom="@mipmap/ic_launcher_signal"
+            app:layout_constraintBottom_toTopOf="@+id/button_goback"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/button_goback"
+            android:layout_width="match_parent"
+            android:layout_height="68dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="33dp"
+            android:fontFamily="casual"
+            android:text="@string/button_goback"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_signal" />
+
+    </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
