--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -10,7 +10,10 @@
         android:id="@+id/query_micro"
         android:layout_width="211dp"
         android:layout_height="73dp"
+        android:layout_marginBottom="177dp"
+        android:layout_marginEnd="28dp"
         android:layout_marginStart="40dp"
+        android:layout_marginTop="45dp"
         android:background="@color/ic_inbus_background"
         android:ems="10"
         android:inputType="none|textPersonName"
@@ -19,18 +22,24 @@
         android:textAlignment="center"
         android:textColor="@android:color/darker_gray"
         android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/button_back"
+        app:layout_constraintEnd_toStartOf="@+id/button_gorecorrido"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="148dp" />
+        app:layout_constraintTop_toBottomOf="@+id/text_query" />
 
     <TextView
         android:id="@+id/text_query"
         android:layout_width="267dp"
         android:layout_height="43dp"
+        android:layout_marginEnd="77dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="60dp"
         android:text="@string/text_query"
         android:textColor="@color/ic_inbus_background"
         android:textSize="30sp"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="@string/text_query" />
 
     <Button
@@ -46,12 +55,15 @@
         android:id="@+id/button_back"
         android:layout_width="392dp"
         android:layout_height="60dp"
+        android:layout_marginBottom="201dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="177dp"
         android:text="@string/button_back"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="398dp" />
+        app:layout_constraintTop_toBottomOf="@+id/query_micro" />
 
 </android.support.constraint.ConstraintLayout>
