--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -46,10 +46,15 @@
         android:id="@+id/button_gorecorrido"
         android:layout_width="65dp"
         android:layout_height="68dp"
+        android:layout_marginBottom="177dp"
         android:layout_marginEnd="40dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="50dp"
         android:text="@string/button_gorecorrido"
+        app:layout_constraintBottom_toTopOf="@+id/button_back"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="153dp" />
+        app:layout_constraintStart_toEndOf="@+id/query_micro"
+        app:layout_constraintTop_toBottomOf="@+id/text_query" />
 
     <Button
         android:id="@+id/button_back"
